# Rdisop

./: .Rbuildignore  .gitignore  .travis.yml  ChangeLog  DESCRIPTION  INDEX  INSTALL  NAMESPACE  README.Rmd  README.md  cleanup  cleanup.win  configure  configure.in  configure.win
src/imslib/: CMakeLists.txt  CODING  Doxyfile  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.cmake  config.h.in  config.status  configure  configure.ac  imslib.ebuild  install-gentoo  install-official  libims.pc  libims.pc.cmake  libims.pc.in  libtool  libtool64  math.h.cmake
src/imslib/cmake/: FindCppUnit.cmake
src/imslib/doc/: imslib-doc.h  imslib.css
src/imslib/examples/: peaklist.cpp  stopwatch.cpp
src/imslib/res/: amino-acid-average.masses-frequencies  amino-acid-mono.masses-frequencies  atom-average.masses  atom-mono.masses  dna-average.masses  dna-mono.masses
src/imslib/src/: CMakeLists.txt
src/imslib/src/ims/: alphabet.cpp  alphabet.h  characteralphabet.cpp  characteralphabet.h  chebyshevfitter.h  composedelement.cpp  composedelement.h  distributedalphabet.cpp  distributedalphabet.h  distributeddata.h  distributionprobabilityscorer.cpp  distributionprobabilityscorer.h  element.cpp  element.h  elementsortcriteria.h  fragmenter.h  fragmentpeak.h  idsequence.h  intensitypeak.h  isotopedistribution.cpp  isotopedistribution.h  isotopespecies.cpp  isotopespecies.h  logger.h  markovsequencegenerator.h  massintensitypeak.h  massintensitytofpeak.h  masspeak.h  masstofpeak.h  nitrogenrulefilter.cpp  nitrogenrulefilter.h  peakcompare.h  peakequalby.h  peakequalto.h  peaklist.h  peakpropertyiterator.h  pmffragmenter.h  randomsequencegenerator.h  sequencegenerator.h  tandemfragmenter.h  (+5 more)
src/imslib/src/ims/.deps/: alphabet.Plo  characteralphabet.Plo  composedelement.Plo  distributedalphabet.Plo  distributionprobabilityscorer.Plo  element.Plo  isotopedistribution.Plo  isotopespecies.Plo  nitrogenrulefilter.Plo  transformation.Plo  weights.Plo
src/imslib/src/ims/base/exception/: exception.h  invalidargumentexception.h  ioexception.h  unknowncharacterexception.h
src/imslib/src/ims/base/parser/: abstractmoleculesequenceparser.h  alphabetparser.h  alphabettextparser.cpp  alphabettextparser.h  distributedalphabetparser.h  distributedalphabettextparser.cpp  distributedalphabettextparser.h  keggligandcompoundsparser.cpp  keggligandcompoundsparser.h  massesparser.h  massestextparser.cpp  massestextparser.h  moleculeionchargemodificationparser.cpp  moleculeionchargemodificationparser.h  moleculesequenceparser.cpp  moleculesequenceparser.h  standardmoleculesequenceparser.cpp  standardmoleculesequenceparser.h
src/imslib/src/ims/base/parser/.deps/: alphabettextparser.Plo  distributedalphabettextparser.Plo  (+5 more)
src/imslib/src/ims/calib/: calibrator.h  geometriccalibrator.h  linearpointsetmatcher.cpp  linearpointsetmatcher.h  linepairstabber.cpp  linepairstabber.h  linestabbingcalibrator.h  lmsregressioncalibrator.h  matchmatrix.cpp  matchmatrix.h  pointsetmatchercalibrator.h
src/imslib/src/ims/calib/.deps/: linearpointsetmatcher.Plo  linepairstabber.Plo  matchmatrix.Plo
src/imslib/src/ims/decomp/: classicaldpmassdecomposer.h  decomputils.h  fastintegermassdecomposer.h  integermassdecomposer.h  massdecomposer.h  realmassdecomposer.cpp  realmassdecomposer.h  residuetable.h  twomassdecomposer.h  twomassdecomposer2.h
src/imslib/src/ims/decomp/.deps/: realmassdecomposer.Plo
src/imslib/src/ims/functors/: alphabetgetmass.h
src/imslib/src/ims/modifier/: intensitynormalizermodifier.h  massrangemodifier.h  modifier.h  multimodifier.h  noisemodifier.h  shiftmodifier.h  sortmodifier.h  unificationmodifier.h  voidmodifier.h
src/imslib/src/ims/tclap/: Arg.h  ArgException.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  VersionVisitor.h  Visitor.h  XorHandler.h
src/imslib/src/ims/utils/: compose_f_gx_hy_t.h  compose_f_gx_t.h  distribution.cpp  distribution.h  gcd.h  math.h  matrix.h  print.h  stopwatch.h
src/imslib/src/ims/utils/.deps/: distribution.Plo
src/imslib/tests/: alphabettest.cpp  chebyshevfittertest.cpp  composedelementtest.cpp  distributedalphabettest.cpp  distributionprobabilityscorertest.cpp  elementtest.cpp  exceptiontest.cpp  fragmentpeaktest.cpp  identitytransformationtest.cpp  intensitypeaktest.cpp  isotopedistributiontest.cpp  isotopespeciestest.cpp  lineartransformationtest.cpp  markovsequencegeneratortest.cpp  massintensitypeaktest.cpp  massintensitytofpeaktest.cpp  masspeaktest.cpp  masstofpeaktest.cpp  peaklisttest.cpp  peakpropertyiteratortest.cpp  pmffragmentertest.cpp  polynomialtransformationtest.cpp  randomsequencegeneratortest.cpp  roundtest.cpp  shifttransformationtest.cpp  stopwatchtest.cpp  tests.cpp  tofpeaktest.cpp  weightstest.cpp
src/imslib/tests/base/parser/: massestextparsertest.cpp  moleculesequenceparsertest.cpp
src/imslib/tests/calib/: linearpointsetmatchertest.cpp  linepairstabbertest.cpp  matchmatrixtest.cpp
src/imslib/tests/decomp/: integermassdecomposertest.cpp  realmassdecomposertest.cpp  twomassdecomposer2test.cpp
src/imslib/tests/modifier/: intensitynormalizermodifiertest.cpp  massrangemodifiertest.cpp  multimodifiertest.cpp  noisemodifiertest.cpp  shiftmodifiertest.cpp  sortmodifiertest.cpp  unificationmodifiertest.cpp  voidmodifiertest.cpp
src/imslib/tests/utils/log4cpp/: log4cppappendertest.cpp  log4cppcategorytest.cpp
src/imslib/tools/: CMakeLists.txt  decompcommandline.h  decompvalidation.cpp  eispectraanalysis.cpp  elementalcompositions.cpp  histogram.cpp  imsdecomp.cpp  imsfrag.cpp  imsintdecomp.cpp  keggruntimes.cpp  numberdecompositions.cpp  options.cpp  options.h  peaklistvalidation.cpp  scoredecompositions.cpp
src/imslib/tools/.deps/: decompvalidation.Po  elementalcompositions.Po  histogram.Po  imsdecomp.Po  imsfrag.Po  imsintdecomp.Po  keggruntimes.Po  numberdecompositions.Po  options.Po  peaklistvalidation.Po  scoredecompositions.Po
(+47 files in other folders)
